--- a/Semestr#2/lab_05/1/report/results.tex
+++ b/Semestr#2/lab_05/1/report/results.tex
@@ -27,10 +27,6 @@
 Исходя из вышеприведенных рассуждений, можно сделать несколько выводов.
 
 \begin{enumerate}
-	\item  Предпочтительней использовать функцию $fopen()$, т.к. $fopen()$ выполняет ввод-вывод с буферизацией, что может оказаться значительно быстрее, чем  с использованием $open()$, $FILE *$ дает возможность использовать $fscanf()$ и другие функции $stdio.h$.
-	\item Следует помнить о буферизации и вовремя использовать $fclose()$ для записи в файл.
-	\item С острожностью использовать $fflush()$, т.к. она оставляет поток открытым.
-	\item Необходимо следить за режимом, с котором открывается поток. 
-	\item Созданный новый дескриптор открытого файла  изначально не разделяется с любым другим процессом, но разделение может возникнуть через $fork()$.
-	\item Функции $fscanf, fprintf, fopen, fclose$ являются обертками высшего уровня над системными вызовами $open, close, read, write$.
-\end{enumerate}
+	\item  При буфферизованном вводе/выводе необходимо учитывать факт записи/чтения данных из буффера, т.к. неправильные действия с данными, записываемыми(или считываемыми) в(из) файл(а), могут привести к неправильной последовательности данных(пример 1) или даже к их потере(пример 3).
+	\item При небуффиризованном вводе/выводе необходимо учитывать, что при одновременном открытии одного и того же файла создается дескриптор открытого файла(столько дескрипторов, сколько раз был открыт файл). Каждый дескриптор struct\_file имеет поле f\_pos, указывающий на позицию чтения или записи в \underline{логическом файле}.
+ \end{enumerate}
